# math-plus

./: .pdm-python  LICENSE  README.md  pyproject.toml
src/math_plus/: exponents.py  geometry.py
tests/: test_exponents.py
