[project]
name = "math-plus"
version = "0.1.0"
description = "Extended python math library"
authors = [
    {name = "Luis Hasbun", email = "41136478+lhasbun@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
